Fix overflow-x issue

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -58,3 +58,7 @@ code {
     white-space: pre-wrap;
     word-wrap: break-word;
 }
+
+pre code {
+    white-space: pre;
+}
